2006-02-06  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* configure.in (gui_b): excise std_string option.
	(gui_b): excise std_vector option.

	* flower/string.cc (Module): excise flower array & string

	* flower/include/std-string.hh: excise flower string.

	* {ly,lily,scm}/*: use dashes in \paper and \layout variables

	* python/convertrules.py (lilypond_version_re_str): require
	only numbers and dots in \version string.

2006-02-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/system-start-delimiter.cc (print): allow style = text too.

	* lily/system-start-delimiter-engraver.cc
	(acknowledge_system_start_text): new function, also add add to
	support of system-start-text (instrument names). This fixes
	instrument names on piano staves.

	* lily/instrument-name-engraver.cc: rewrite. Use
	system-start-delimiter approach. This save memory and cpu.

	* scm/define-grobs.scm (all-grob-descriptions): remove
	instrument-name from break-alignment.

	* mf/GNUmakefile ($(NCSB_TTFS)): depend on pfx2ttf script too.

2006-02-05  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/stepmake/generic-vars.make (LOOP): Add PLUS to keep -j
	jobserver going.

	* configure.in (std_vector): On by default.

	* lily/include/font-metric.hh:
	* lily/include/tfm-reader.hh: 
	* lily/include/spanner.hh: Use unsigned for indices and sizes.
	Update users.

	* Documentation/user/changing-defaults.itely: Fix link v2.5, out-www.

2006-02-05  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION (PACKAGE_NAME): 2.7.31

	* scm/framework-ps.scm (dump-stencil-as-EPS): don't hardcode left
	EPS edge at 0, but take minimum with left-overshoot. This fixes
	cut off system start delims. 

	* lily/instrument-name-engraver.cc (stop_translation_timestep):
	hack: add to axis group if not added yet. This fixes hara kiri'd
	piano staves.

	* lily/hara-kiri-group-spanner.cc
	(force_hara_kiri_in_y_parent_callback): fix signatures.

	* lily/hairpin.cc (print): check next hairpin to see whether or
	not to be continuing.
